574: Update from azure instead. Almost there.
