# docs/swagger/swagger.yaml
@@ -23,15 +23,23 @@ definitions:
       targetDeviceSerial:
         type: string
     type: object
-  updateutil.UpdateParams:
+  updateutil.UpdateSource:
     properties:
-      baseUpdateURL:
+      container:
         type: string
-      force:
-        type: boolean
-      version:
+      kind:
+        $ref: '#/definitions/updateutil.UpdateSourceKind'
+      path:
         type: string
     type: object
+  updateutil.UpdateSourceKind:
+    enum:
+    - azure
+    - github
+    type: string
+    x-enum-varnames:
+    - UpdateSourceKindAzure
+    - UpdateSourceKindGithub
   updateutil.UpdateVersion:
     properties:
       url:
@@ -111,6 +119,15 @@ definitions:
       size:
         type: integer
     type: object
+  v1_version.UpdateParams:
+    properties:
+      force:
+        type: boolean
+      source:
+        $ref: '#/definitions/updateutil.UpdateSource'
+      version:
+        type: string
+    type: object
   v1_version.UpdateRequest:
     properties:
       version:
@@ -129,8 +146,8 @@ definitions:
     type: object
   v1_version.updateLatestParams:
     properties:
-      baseUpdateURL:
-        type: string
+      source:
+        $ref: '#/definitions/updateutil.UpdateSource'
     type: object
 info:
   contact: {}
@@ -763,7 +780,7 @@ paths:
         name: update
         required: true
         schema:
-          $ref: '#/definitions/updateutil.UpdateParams'
+          $ref: '#/definitions/v1_version.UpdateParams'
       produces:
       - application/json
       responses:
