# internal/server/api/v1/version/list_versions.go
@@ -18,7 +18,13 @@ import (
 // @Router /version/available [get]
 func listVersions(c *gin.Context) *serverutil.Response {
 	all := c.Query("all") == "true"
-	result, err := updateutil.ListPossibleUpdates(org, repo, all)
+	result, err := updateutil.ListPossibleUpdates(
+		updateutil.NewUpdateSource(
+			updateutil.UpdateSourceKindGithub,
+			org,
+			repo,
+		),
+		all)
 	if err != nil {
 		return serverutil.NewResponse().
 			WithStatusCode(500).
